2008-10-14  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/SecurityDeclarationReader.cs: protect against
	wrongly formatted security attributes.

2008-10-12  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil.Cil/SymbolStoreHelper.cs: Change two "static readonly"
	fields into const.
	[Found using Gendarme PreferLiteralOverInitOnlyFieldsRule]

2008-10-11  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil/ConstructorCollection.cs: Fix a NRE if a null parameter
	is provided to one of the GetConstructor overloads.

2008-10-07  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionReader.cs: don't cache generic typespecs,
	as some compiler reuse generic instance signatures with different
	generic contexts.

2008-10-01  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.dll.sources
	* Mono.Cecil.csproj
	* Mono.Cecil/AssemblyStripper.cs
	* Mono.Cecil.Cil/CodeWriter.cs
	* Mono.Cecil.Metadata/MetadataWriter.cs: add a new AssemblyStripper
	class to be used by a tool to empty method bodies for assemblies
	that have been AOTed.

2008-09-29  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/GenericParameter.cs: override TypeReference.Scope.

2008-09-25  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Binary/MemoryBinaryWriter.cs: Make sure QuadAlign
	properly enlarge the memory stream if needed.
	Patch by Regis Vaquette <rvaquette@yahoo.fr>.

2008-09-18  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionReader.cs (GetModifierType): protect against
	zero rids.

2008-09-15  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Signatures/SignatureReader.cs: fix regression
	in reading custom mods.

2008-09-04  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Signatures/SignatureReader.cs: better read modifiers on
	return types and parameters.

2008-09-02  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Metadata/UserStringsHeap.cs: fix reading of some unicode fu.

2008-09-02  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/MethodAttributes.cs: add CheckAccessOnOverride.