@@ -1,3 +1,9 @@
+2008-10-17	Rodrigo B. de Oliveira <rodrigobamboo@gmail.com>
+
+	* Mono.Cecil/ConstructorCollection.cs
+	* Mono.Cecil.Binary/ImageReader.cs:
+		Compact Framework compilation fixes.
+	
 2008-10-14  Jb Evain  <jbevain@novell.com>
 
 	* Mono.Cecil/SecurityDeclarationReader.cs: protect against
